# NitiNova

./: .env.example  .gitignore  BLACKBOX_PROMPT.md  BUGFIX_TODO.md  Dockerfile  Dockerfile.frontend  FIXED_SCRIPTS.md  FIX_GUIDE.md  MVP_STRUCTURE.md  NEXT_PHASE.md  README.md  TODO.md  TODO2.md  TODO_README.md  UI_UPGRADE_TODO.md  alembic.ini  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
NitiNova-MVP/: .gitignore  README.md
NitiNova-MVP/backend/: requirements.txt  run.py
alembic/: env.py
backend/: .env.example  Dockerfile  __init__.py  main.py  requirements.txt
backend/api/: auth.py  (+10 more)
data/: README.md  SOURCES.md  cases.json  ingestion_log.json
docs/: api_spec.md  architecture.md
frontend/: README.md  app.js  index.html  next.config.mjs  package-lock.json  package.json  style.css  tailwind.config.ts  testing.html  tsconfig.json  vite.config.ts
judgementcopy_management_system/: README.md  main.py  requirements.txt  sample_output.json
ocr_pipeline/: __init__.py  ocr_engine.py  parser.py
scripts/: README.md  build_vector_index.py  count_cases.py  download_sci.py  enrich_metadata.py  ingest_judgments.py  ingest_raw.py  parse_judgments.py  seed_db.py  test_api_pipeline.py  test_llm.py  test_ocr.py  test_parser.py  test_search.py
src/: App.css  App.tsx  index.css
tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_llm.py  test_llm_quality.py  test_ocr.py  test_ocr_accuracy.py  test_parser.py  test_parser_edge_cases.py  test_pipeline.py  test_search.py
(+153 files in other folders)
